--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -87,7 +87,10 @@ else()
 endif()
 if(DEBUG)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG=1")
-    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address,undefined")
+    if(SANITIZE)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gsource-map -fsanitize=address,undefined")
+        add_link_options(-sALLOW_MEMORY_GROWTH)
+    endif()
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -ffast-math -flto --closure=1")
 endif()
