--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -71,8 +71,18 @@ else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSERVER_PORT=9001")
 endif()
 if(DEBUG)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -DDEBUG=1")
-    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG=1")
+    if(WASM_SERVER)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gsource-map")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+    endif()
+    if(SANITIZE)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined")
+        if(WASM_SERVER)
+            add_link_options(-sALLOW_MEMORY_GROWTH)
+        endif()
+    endif()
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -ffast-math -flto")
 endif()
